[package]
name = "conduit-web-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "conduit-web-demo"
path = "src/main.rs"

[dependencies]
# Standalone build: pulls the conduit crates from GitHub. Cargo.lock pins the
# exact commit, so checkouts are reproducible. For fast local iteration against
# a side-by-side ../conduit checkout, swap these back to `path = "..."`.
conduit-core = { git = "https://github.com/Everless321/conduit", package = "conduit-core", branch = "main" }
conduit-engine = { git = "https://github.com/Everless321/conduit", package = "conduit-engine", branch = "main" }
conduit-store-dibs = { git = "https://github.com/Everless321/conduit", package = "conduit-store-dibs", branch = "main" }

tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
